refactor: Clean up code formatting and remove unused imports